kubernetes/apps/home/speedtest-tracker/ingress/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: speedtest-tracker-ingress
  annotations:
    kubernetes.io/ingress.class: traefik-internal
    external-dns.alpha.kubernetes.io/target: default.internal.javiersant.com
    gethomepage.dev/enabled: "true"
    gethomepage.dev/href: "https://speedtest.default.internal.javiersant.com"
    gethomepage.dev/description: Speedtest Tracker Dashboard
    gethomepage.dev/group: Home
    gethomepage.dev/icon: watchyourlan.png
    gethomepage.dev/name: Speedtest Tracker
    gethomepage.dev/widget.type: speedtest
    gethomepage.dev/widget.url: "http://speedtest-tracker.home.svc.cluster.local:80"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`speedtest.default.internal.javiersant.com`)
      kind: Rule
      services:
        - kind: Service
          name: speedtest-tracker
          port: 80
  tls:
    secretName: wildcard-javiersant-com-tls
